Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
11.6.0
-
None
Description
Value list of some fields of Show-Slave-Status is truncated at displaying.
How to reproduce is like the following:
set @@global.replicate_do_table='db_to_filter.0123456789_1,db_to_filter.0123456789_2,db_to_filter.0123456789_3,db_to_filter.0123456789_4,db_to_filter.0123456789_5,db_to_filter.0123456789_6,db_to_filter.0123456789_7'; |
|
|
show slave status\G
|
|
lists only a subset of the db.table list:
Replicate_Do_Table: db_to_filter.0123456789_7,db_to_filter.0123456789_1,db_to_filter
|
Attachments
Issue Links
- is caused by
-
MDEV-33526 Create IS.slave_status table as alias for SHOW SLAVE STATUS command
-
- Closed
-
-
MDEV-35948 Test SHOW REPLICA STATUS with large/long result values
-
- Open
-