MDEV-35693: Improve SHOW REPLICA STATUS column sizes

Resize SHOW REPLICA STATUS’s (technically `INFORMATION_SCHEMA.`
`SLAVE_STATUS`’s) columns to better match their possible values

In case of intentionally but absurdly long lists,
text columns that list an uncapped number of elements
have expanded to accept as many bytes as we could support.

Particularly, the first-gen `Replicate_` filters were
incorrectly typed as singlular `Name()`s during MDEV-33526.
Under `Name`s’ 64-char limit, they could overflow
(read: truncate) even before their lengths got absurd.

In response to `‘MAX_SLAVE_ERRMSG’ was not declared in this scope` in
Embedded builds, a new `#ifdef HAVE_REPLICATION` guard wraps
`slave_status_info` to skip this unused data in Replication-less builds.

Reviewed-by: Brandon Nesterenko <brandon.nesterenko@mariadb.com>